@@ -1,3 +1,8 @@
+1999-07-16  Ben Elliston  <bje@cygnus.com>
+
+	* configure.in: Configure the testsuite directory for arm.
+	* configure: Regenerate.
+
 1999-04-08  Nick Clifton  <nickc@cygnus.com>
 
 	* configure.in: Add support for MCore target.
